chore: optimize .gitignore and secure environment variables